# kbank-email-notifications-lambda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
auto/: package
infra/: main.tf  outputs.tf
kbank_email_notifications_lambda/: handler.py  hello_world.py  parser.py  processor.py
tests/: test_handler.py  test_hello_world.py  test_parser.py
